# disease-predictor

./: README.md
demo/: demo_disease_predictor.py
src/DiseasePredictor/: pyproject.toml  requirements.txt
src/DiseasePredictor/disease_predictor/: rank_genes.py
src/DiseasePredictor/disease_predictor/entities/: __init__.py
src/DiseasePredictor/test/: test_disease_predictor.py
src/DiseasePredictor/test/resources/: protein_genes.txt  protein_protein_interactions.txt
